Errors while login and registering are now more visible. Login with token now correctly works in LoginComponent.jsx. Removed console.log in RegisterComponent.jsx. HeaderComponent now handles data without crashing.

--- a/Frontend/src/components/UserComponents/LoginComponent.css
+++ b/Frontend/src/components/UserComponents/LoginComponent.css
@@ -40,6 +40,7 @@
   color: red;
   margin-bottom: 1rem;
   font-weight: bold;
+  font-size: 2rem;
 }
 
 .login-button {
